# czdb-rs

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  README_CN.md  README_EN.md  help.md
npm-test/: bench.ts
src/: decrypt.rs  lib.rs  searcher.rs
tests/: IPV4.txt  IPV6.txt  bench_rust.rs
tests/npm-test/: bench.ts  package.json
tests/output/: native_ipv6.txt  node_ipv4_btree.txt  rust_ipv4_btree.txt  rust_ipv6_btree.txt
tests/rs-test/: bench_rust.rs  test_search.rs
