[package]
name = "czdb-rs"
version = "0.1.1"
edition = "2021"
authors = ["HUA Haohui"]
description = "一个高性能的纯真IP社区版的 Rust 实现，并且支持 NodeJs(Bun) 的WASM调用库。|A high-performance Rust implementation of CZDB searcher with WASM support."
license = "Apache-2.0"
repository = "https://github.com/isTrih/czdb-rs"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.8"
base64 = "0.21"
block-padding = "0.3"
ecb = "0.1"
cipher = "0.4"
thiserror = "1.0"
encoding_rs = "0.8"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
byteorder = "1.5"
ipnet = "2.9" # Useful for IP handling
anyhow = "1.0"
rmp = "0.8"

[dev-dependencies]
criterion = "0.5" # For benchmarking

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[[test]]
name = "bench_rust"
path = "tests/rs-test/bench_rust.rs"

[[test]]
name = "test_search"
path = "tests/rs-test/test_search.rs"
